# Autonomous_Mobile_Robot_Control

./: README.md
p1_maze_solver_robot/src copy/ee4308_bringup/: CMakeLists.txt  package.xml
p1_maze_solver_robot/src copy/ee4308_bringup/launch/: proj1.launch.py  proj1_sim.launch.py  proj1_sim_slam.launch.py
p1_maze_solver_robot/src copy/ee4308_bringup/params/: proj1_simon.yaml
p1_maze_solver_robot/src copy/ee4308_bringup/urdf/: turtle_proj1.urdf.xacro
p1_maze_solver_robot/src copy/ee4308_bringup/worlds/: empty_world.world  turtlebot3_house.world
p1_maze_solver_robot/src copy/ee4308_core/include/ee4308_core/: raytracer.hpp
p1_maze_solver_robot/src copy/ee4308_turtle/: CMakeLists.txt  ee4308_turtle_controller.xml  ee4308_turtle_planner.xml  package.xml
p1_maze_solver_robot/src copy/ee4308_turtle/include/ee4308_turtle/: controller.hpp
p1_maze_solver_robot/src copy/ee4308_turtle/src/: controller.cpp  planner.cpp
p1_maze_solver_robot/src/ee4308_bringup/launch/: proj1_slam.launch.py
p1_maze_solver_robot/src/ee4308_bringup/maps/: my_map_sim.pgm  my_map_sim.yaml
p1_maze_solver_robot/src/ee4308_bringup/params/: proj1.yaml
p1_maze_solver_robot/src/ee4308_core/: CMakeLists.txt  package.xml
p1_maze_solver_robot/src/ee4308_core/include/ee4308_core/: core.hpp
p1_maze_solver_robot/src/ee4308_turtle/include/ee4308_turtle/: controller_simon.hpp  planner.hpp
p1_maze_solver_robot/src/ee4308_turtle/src/: controller_simon.cpp  planner_old.cpp
p2_ekf_quadcopter/src/ee4308_bringup/: CMakeLists.txt  package.xml
p2_ekf_quadcopter/src/ee4308_bringup/launch/: lab2.launch.py  proj2.launch.py
p2_ekf_quadcopter/src/ee4308_bringup/maps/: my_map_sim.pgm  my_map_sim.yaml
p2_ekf_quadcopter/src/ee4308_bringup/params/: drone.yaml  proj2.yaml  proj2_sol.yaml
p2_ekf_quadcopter/src/ee4308_bringup/rviz/: proj2.rviz
p2_ekf_quadcopter/src/ee4308_bringup/urdf/: drone.urdf.xacro  turtle_proj2.urdf.xacro
p2_ekf_quadcopter/src/ee4308_core/: package.xml
p2_ekf_quadcopter/src/ee4308_drone/: CMakeLists.txt  package.xml
p2_ekf_quadcopter/src/ee4308_drone/include/ee4308_drone/: behavior.hpp  controller.hpp  estimator.hpp  planner.hpp
p2_ekf_quadcopter/src/ee4308_drone/src/: behavior.cpp  controller.cpp  estimator.cpp  planner.cpp  teleop.cpp
p2_ekf_quadcopter/src/ee4308_gazebo_plugins/: CMakeLists.txt  package.xml
p2_ekf_quadcopter/src/ee4308_gazebo_plugins/include/ee4308_gazebo_plugins/: gazebo_ros_baro.hpp  gazebo_ros_magnetic.hpp
p2_ekf_quadcopter/src/ee4308_gazebo_plugins/src/: gazebo_ros_baro.cpp  gazebo_ros_magnetic.cpp
p2_ekf_quadcopter/src/ee4308_turtle2/: CMakeLists.txt  package.xml
p2_ekf_quadcopter/src/ee4308_turtle2/include/ee4308_turtle2/: behavior.hpp  controller.hpp  map_server.hpp  planner.hpp
p2_ekf_quadcopter/src/ee4308_turtle2/src/: behavior.cpp  controller.cpp  map_server.cpp  planner.cpp
