<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ee4308_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mallab@todo.todo">mallab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>Eigen3</depend> -->

  <!-- <build_depend>eigen</build_depend> -->
  <!-- <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend> -->
  <!-- <build_export_depend>eigen</build_export_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
